# TinyNote

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  plan.md  prompt.md  prompt2.md  代码审查.md  功能总结.md  开发经验.md
.claude/plans/: bug-witty-horizon.md  sqlite-busy-fix.md
.github/scripts/: extract-release-notes.mjs
.github/workflows/: release.yml
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  icon-assets.test.ts  migrations.test.ts  release-workflow.test.ts  tauri.conf.json  updater-config.test.ts  window-style.test.ts  windows-subsystem.test.ts
desktop/src-tauri/capabilities/: default.json  default.test.ts
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/app/: App.test.tsx  App.tsx
desktop/src/components/: AboutPanel.test.tsx  AboutPanel.tsx  ArchivePanel.tsx  ConfirmDialog.tsx  DateSection.tsx  RoutinePanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  TaskInput.test.tsx  TaskInput.tsx  TaskItem.test.tsx  TaskItem.tsx  TaskManagePanel.test.tsx  TaskManagePanel.tsx  TitleBar.test.tsx  TitleBar.tsx
desktop/src/pages/: MainPage.test.tsx  MainPage.tsx
desktop/src/repositories/: db.test.ts  db.ts  routineRepository.createTasksWithInstances.test.ts  routineRepository.test.ts  routineRepository.ts  settingsRepository.ts  taskRepository.test.ts  taskRepository.ts  taskRepository.visibility.test.ts
desktop/src/services/: appUpdateService.test.ts  appUpdateService.ts  archiveService.ts  dataPortabilityService.test.ts  dataPortabilityService.ts  (+20 more)
(+15 files in other folders)
